# Workshop_Computer

./: .gitignore
releases/45_bends/: CMakeLists.txt  bends.cpp  dsp_blocks.h  fixed_math.h  generate_samples.py  info.yaml  samples.h
releases/45_bends/ComputerCard/: ComputerCard.h
releases/46_rompler/: .gitignore  CMakeLists.txt  README.MD  implementation_plan.md  info.yaml  plate_reverb_q15.h  rompler.cpp  usb_midi_host.c  usb_midi_host_app_driver.c
releases/46_rompler/ComputerCard/: ComputerCard.h
releases/46_rompler/web/: rompler.uf2  rompler_16mb.uf2
releases/47_rooms/: CMakeLists.txt  README.md  info.yaml  rooms.cpp
releases/47_rooms/ComputerCard/: ComputerCard.h
releases/49_modes/: .gitignore  CMakeLists.txt  README.md  build_error.txt  diffuser_q15.h  dsp_q15.h  envelope_q15.h  exciter_q15.h  implementation_plan.md  info.yaml  modal_test.mid  modes.cpp  plate_reverb_q15.h  resonator_q15.cpp  resonator_q15.h  resources_q15.cpp  resources_q15.h  samples_flash.cpp  samples_flash.h  string_q15.cpp  string_q15.h  svf_q15.h  tube_q15.h  tusb_config.h  usb_descriptors.c  usb_midi_host.h
releases/49_modes/ComputerCard/: ComputerCard.h
releases/49_modes/tools/: convert_luts.py  extract_samples.py
