cmake_minimum_required (VERSION 3.13)
set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
include(pico_sdk_import.cmake)
project(rooms C CXX ASM)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()

add_executable(rooms)

target_sources(rooms PUBLIC
    ${CMAKE_CURRENT_LIST_DIR}/rooms.cpp
)

# Include the current directory and the ComputerCard library
target_include_directories(rooms PUBLIC 
    ${CMAKE_CURRENT_LIST_DIR} 
    ${CMAKE_CURRENT_LIST_DIR}/ComputerCard
)

# Avoid startup timing problems
target_compile_definitions(rooms PUBLIC PICO_XOSC_STARTUP_DELAY_MULTIPLIER=64)
target_compile_definitions(rooms PRIVATE PICO_DEFAULT_UART_BAUD_RATE=115200)

pico_enable_stdio_uart(rooms 0)
pico_enable_stdio_usb(rooms 0) # Keep USB stdio disabled to prevent interference with normalization probe
pico_add_extra_outputs(rooms)

# Force the binary to copy to RAM to avoid flash cache miss timing jitter
pico_set_binary_type(rooms copy_to_ram)

target_compile_options(rooms PRIVATE -Wdouble-promotion -Wfloat-conversion -Wall -Wextra)
target_link_options(rooms PRIVATE -Wl,--print-memory-usage)
	
target_link_libraries(rooms 
    pico_unique_id 
    pico_stdlib 
    hardware_dma 
    hardware_i2c 
    hardware_pwm 
    hardware_adc 
    hardware_spi 
    hardware_timer 
    pico_multicore 
    hardware_flash 
    hardware_vreg 
    hardware_clocks
)
